cabal-version:   3.0
name:            meta-parsing
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          sebastianselander
maintainer:      sebastian.selander@gmail.com

-- copyright:
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall -Wextra

library
  import:           warnings
  exposed-modules:
    QuasiParser

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , parsec
    , template-haskell

  hs-source-dirs:   src
  default-language: GHC2021
